--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ header {
 
 .instructions {
     width: 600px;
+    height: 361px;
     margin: 20px 0 20px 20px;
     padding: 20px;
     float: left;
@@ -75,13 +76,13 @@ header {
 }
 
 .tony {
-        width: 440px;
+        width: 460px;
         height: 350px;
         padding: 20px;
-        margin: 20px;
+        margin: 20px 20px 20px 0;
         background-image: url("../images/iron man.jpg");
         background-repeat: no-repeat;
-        background-size: 440px 350px;
+        background-size: 460px 350px;
         float: left;
 }
 
@@ -91,6 +92,11 @@ header {
     top: 20px;
     height: 100px;
     width: 100px;
-    font-size: 100px
+    font-size: 100px;
+    color: #771414
+}
+
+.wins-losses {
+    font-size: 25px;
 }
         
